--- a/public/front/css/custom.css
+++ b/public/front/css/custom.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Quicksand:wght@400;500;700&display=swap");
+
 .featured-img {
     width: 100%;
     height: 350px;
@@ -38,6 +40,19 @@
     background-color: rgb(12, 12, 86);
 }
 
-/* .card-home {
-    height: 300px;
-} */
+.nav-link {
+    font-weight: 500;
+}
+
+.nav-link:hover {
+    color: salmon !important;
+}
+
+.designer {
+    opacity: 0.7;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 1000;
+    color: tomato !important;
+    margin: 0px 5px;
+}
